--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 
 		<h1 class="text-center">LISTA DE LIBROS</h1>
 		<div class="text-center my-3">
-			<a href="/nuevo" class="btn btn-primary"><i class="fas fa-user-plus"></i>&nbsp;Añadir Libro</a>
+			<a href="/nuevo" class="btn btn-primary"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Añadir Libro</a>
 		</div>
       
 	<table class="table table-striped table-bordered justify-content-center">
